--- a/index.html
+++ b/index.html
@@ -225,69 +225,27 @@
         <div class="row">
           <div class="col-lg-12 text-center">
             <h2 class="section-heading text-uppercase">Work Experiences</h2>
-            <h3 class="section-subheading text-muted">Here is a list of jobs and interneships I completed during my studies. More details can be found on my <a target="_blank" href="https://fr.linkedin.com/in/laura-deleuze-5b7051b0" style="text-decoration:none">LinkedIn profile</a>.</h3>
+            <h3 class="section-subheading text-muted">Here is a list of jobs as well as interneships I have completed since I started my studies. More details can be found on my <a target="_blank" href="https://fr.linkedin.com/in/laura-deleuze-5b7051b0" style="text-decoration:none">LinkedIn profile</a>.</h3>
           </div>
         </div>
         <div class="row">
           <div class="col-lg-12">
             <ul class="timeline">
               <li>
-                <div class="timeline-image">
-                  <img class="rounded-circle img-fluid" src="img/about/science.jpg" alt="">
+                <div class="timeline-image" style="padding:16px;background-color:#2c5c8b;">
+                  <img class="rounded-circle img-fluid" src="img/about/flygresor.png" alt="">
                 </div>
                 <div class="timeline-panel">
                   <div class="timeline-heading">
-                    <h4>2013 - 2014</h4>
-                    <h4 class="subheading">Science Coach</h4>
+                    <h4>May 2018</h4>
+                    <h4 class="subheading">UX Engineer and mentor at Flygresor.se</h4>
                   </div>
                   <div class="timeline-body">
-                    <p class="text-muted">I tutored three bachelor students through the year and coached them in Math, Physics and Chemistry, 2 hours per week, until the final national entry exams to Engineering Schools.</p>
+                    <p class="text-muted">Firstly hired to design and implement the interface of their ML based marketing planning tool, I now work as a UX designer, front end developer and mentor at Flygresor, part of the eTraveli group. I help optimize internal operations as well as enhance UX experience of websites.</p>
                   </div>
                 </div>
               </li>
               <li class="timeline-inverted">
-                <div class="timeline-image">
-                  <img class="rounded-circle img-fluid" src="img/about/cp.png" alt="">
-                </div>
-                <div class="timeline-panel">
-                  <div class="timeline-heading">
-                    <h4>July 2015</h4>
-                    <h4 class="subheading">IT Assistant at Clinic Pasteur</h4>
-                  </div>
-                  <div class="timeline-body">
-                    <p class="text-muted">I contributed to the deployment of the software Diane improving the quality and conformity of pre surgery check-ups, their transmissions and follow ups, including the training of doctors and medical staff on how to use the tool efficiently on a daily basis.</p>
-                  </div>
-                </div>
-              </li>
-              <li>
-                <div class="timeline-image">
-                  <img class="rounded-circle img-fluid" src="img/about/minutepap.png" alt="">
-                </div>
-                <div class="timeline-panel">
-                  <div class="timeline-heading">
-                    <h4>August 2015</h4>
-                    <h4 class="subheading">Web Developper Intern at Minute Papillote</h4>
-                  </div>
-                  <div class="timeline-body">
-                    <p class="text-muted">I helped establishing and implementing communication processes and online channels between the start up Minute Papillote and its customers and end users.</p>
-                  </div>
-                </div>
-              </li>
-              <li class="timeline-inverted">
-                <div class="timeline-image">
-                  <img class="rounded-circle img-fluid" src="img/about/math.jpg" alt="">
-                </div>
-                <div class="timeline-panel">
-                  <div class="timeline-heading">
-                    <h4>2016 - 2017</h4>
-                    <h4 class="subheading">Math Tutor</h4>
-                  </div>
-                  <div class="timeline-body">
-                    <p class="text-muted">I taught Mathematics to two high school students, helped them develop their potential and earn confidence in the scientific fields.</p>
-                  </div>
-                </div>
-              </li>
-              <li>
                 <div class="timeline-image">
                   <img class="rounded-circle img-fluid" src="img/about/pond.jpg" alt="">
                 </div>
@@ -301,25 +259,60 @@
                   </div>
                 </div>
               </li>
-              <li class="timeline-inverted">
-                <div class="timeline-image" style="padding:16px;background-color:#2c5c8b;">
-                  <img class="rounded-circle img-fluid" src="img/about/flygresor.png" alt="">
+              <li>
+                <div class="timeline-image">
+                  <img class="rounded-circle img-fluid" src="img/about/math.jpg" alt="">
                 </div>
                 <div class="timeline-panel">
                   <div class="timeline-heading">
-                    <h4>May 2018</h4>
-                    <h4 class="subheading">UX Engineer and mentor at Flygresor.se</h4>
+                    <h4>2016 - 2017</h4>
+                    <h4 class="subheading">Math Tutor</h4>
                   </div>
                   <div class="timeline-body">
-                    <p class="text-muted">I work as a UX designer, front end developer and mentor at Flygresor, part of the eTraveli group. I help optimize internal operations as well as enhance UX experience of websites.</p>
+                    <p class="text-muted">I taught Mathematics to two high school students, helped them develop their potential and earn confidence in the scientific fields.</p>
+                  </div>
+                </div>
+              </li>
+              <li class="timeline-inverted">
+                <div class="timeline-image">
+                  <img class="rounded-circle img-fluid" src="img/about/minutepap.png" alt="">
+                </div>
+                <div class="timeline-panel">
+                  <div class="timeline-heading">
+                    <h4>August 2015</h4>
+                    <h4 class="subheading">Web Developper Intern at Minute Papillote</h4>
+                  </div>
+                  <div class="timeline-body">
+                    <p class="text-muted">I helped establishing and implementing communication processes and online channels between the start up Minute Papillote and its customers and end users.</p>
                   </div>
                 </div>
               </li>
               <li>
+                <div class="timeline-image">
+                  <img class="rounded-circle img-fluid" src="img/about/cp.png" alt="">
+                </div>
+                <div class="timeline-panel">
+                  <div class="timeline-heading">
+                    <h4>July 2015</h4>
+                    <h4 class="subheading">IT Assistant at Clinic Pasteur</h4>
+                  </div>
+                  <div class="timeline-body">
+                    <p class="text-muted">I contributed to the deployment of the software Diane improving the quality and conformity of pre surgery check-ups, their transmissions and follow ups, including the training of doctors and medical staff on how to use the tool efficiently on a daily basis.</p>
+                  </div>
+                </div>
+              </li>
+              <li class="timeline-inverted" style="background-color:#ffffff"">
                 <div class="timeline-image timeline-end">
-                  <h4>Be Part
-                    <br>Of Your
-                    <br>Story!</h4>
+                  <img class="rounded-circle img-fluid" src="img/about/science.jpg" alt="">
+                </div>
+                <div class="timeline-panel">
+                  <div class="timeline-heading">
+                    <h4>2013 - 2014</h4>
+                    <h4 class="subheading">Science Coach</h4>
+                  </div>
+                  <div class="timeline-body">
+                    <p class="text-muted">I tutored three bachelor students through the year and coached them in Math, Physics and Chemistry, 2 hours per week, until the final national entry exams to Engineering Schools.</p>
+                  </div>
                 </div>
               </li>
             </ul>
